--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "phosphor-icons": "^1.4.2",
+    "plantuml-encoder": "^1.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
